--- a/tokyo.html
+++ b/tokyo.html
@@ -6,6 +6,7 @@
     
     <!-- style -->
     <link rel="stylesheet" href="tokyo.style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Jost:ital,wght@0,400;1,200&family=Noto+Sans+Display&family=Noto+Sans+KR:wght@100;300&family=Noto+Serif+Georgian&family=Poppins:wght@100&display=swap" rel="stylesheet">
 </head>
     
 <body>
@@ -42,7 +43,7 @@
             <div class="img0">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img0.jpeg" alt="Summer x2 Osaka">
+            <img src="img0.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -50,7 +51,7 @@
             <div class="img00">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img00.jpeg" alt="Summer x2 Osaka">
+            <img src="img00.jpeg" alt="TOKYO">
             <span>짱구와 같이 가는 짱구 고향</span>
             </li>
             </ul>
@@ -58,7 +59,7 @@
             <div class="img000">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img000.jpeg" alt="Summer x2 Osaka">
+            <img src="img000.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -66,7 +67,7 @@
             <div class="img0000">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img0000.jpeg" alt="Summer x2 Osaka">
+            <img src="img0000.jpeg" alt="TOKYO">
             <span>저녁 비행기를 타니 창밖이 예뻤다.</span>
             </li>
             </ul>
@@ -74,7 +75,7 @@
         <div class="img">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img1.jpeg" alt="Summer x2 Osaka">
+            <img src="img1.jpeg" alt="TOKYO">
             <span>하늘에서 내려다 보는 도쿄 야경.</span>
             </li>
             </ul>
@@ -82,7 +83,7 @@
         <div class="img1">
             <ul class="clearfix">
              <li>
-             <img src="images/tokyo/img2.jpeg" alt="Summer x2 Osaka">
+             <img src="img2.jpeg" alt="TOKYO">
              <p>📍 Narita International Airport</p>
              <span> </span>
              </li>
@@ -91,7 +92,7 @@
         <div class="img2">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img3.jpeg" alt="Summer x2 Osaka">
+            <img src="img3.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -99,7 +100,7 @@
         <div class="img3">
             <ul class="clearfix">
              <li>
-             <img src="images/tokyo/img4.jpeg" alt="Summer x2 Osaka">
+             <img src="img4.jpeg" alt="TOKYO">
              <span>스카이라이너타고 우에노역으로 가는 길 </span>
              </li>
             </ul>
@@ -107,7 +108,7 @@
         <div class="img4">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img5.jpeg" alt="Summer x2 Osaka">
+            <img src="img5.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -115,7 +116,7 @@
         <div class="img5">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img6.jpeg" alt="Summer x2 Osaka">
+            <img src="img6.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -123,7 +124,7 @@
         <div class="img6">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img7.jpeg" alt="Summer x2 Osaka">
+            <img src="img7.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -131,7 +132,7 @@
         <div class="img7">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img8.jpeg" alt="Summer x2 Osaka">
+            <img src="img8.jpeg" alt="TOKYO">
                 <p>📍 Ueno Station</p>
             <span>우에노역에서는 다시 지하철로 갈아탔다</span>
             </li>
@@ -140,7 +141,7 @@
             <div class="img00000">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img10.jpeg" alt="Summer x2 Osaka">
+            <img src="img10.jpeg" alt="TOKYO">
             <span>일본 지하철은 항상 넘쳐나는 광고배너 구경하는 재미가 있다.</span>
             </li>
             </ul>
@@ -148,7 +149,7 @@
         <div class="img8">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img9.jpeg" alt="Summer x2 Osaka">
+            <img src="img9.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -156,7 +157,7 @@
         <div class="img9">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img00000.jpeg" alt="Summer x2 Osaka">
+            <img src="img00000.jpeg" alt="TOKYO">
             <span>역에 유독 정장입은 분들이 많았던 늦은 퇴근 시간</span>
             </li>
             </ul>
@@ -164,7 +165,7 @@
         <div class="img10">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img11.jpeg" alt="Summer x2 Osaka">
+            <img src="img11.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -172,7 +173,7 @@
         <div class="img11">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img13.jpeg" alt="Summer x2 Osaka">
+            <img src="img13.jpeg" alt="TOKYO">
             <span>텐동먹으러 '한노스케' 본점 도착.</span>
             </li>
             </ul>
@@ -180,7 +181,7 @@
         <div class="img12">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img12.jpeg" alt="Summer x2 Osaka">
+            <img src="img12.jpeg" alt="TOKYO">
             <span>웨이팅하는 동안 오사카에서 먹은 포도물을 찾았지만 결국 없었다. .</span>
             </li>
             </ul>
@@ -188,7 +189,7 @@
         <div class="img13">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img14.jpeg" alt="Summer x2 Osaka">
+            <img src="img14.jpeg" alt="TOKYO">
                 <p>📍 Kaneko-Hannosuke</p>
             <span> </span>
             </li>
@@ -197,7 +198,7 @@
         <div class="img14">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img15.jpeg" alt="Summer x2 Osaka">
+            <img src="img15.jpeg" alt="TOKYO">
             <span>비슷한거라도. . 역시 맛은 다르다.</span>
             </li>
             </ul>
@@ -205,7 +206,7 @@
         <div class="img15">
             <ul class="clearfix">
              <li>
-             <img src="images/tokyo/img16.jpeg" alt="Summer x2 Osaka">
+             <img src="img16.jpeg" alt="TOKYO">
              <span> </span>
              </li>
             </ul>
@@ -213,7 +214,7 @@
         <div class="img16">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img17.jpeg" alt="Summer x2 Osaka">
+            <img src="img17.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -221,7 +222,7 @@
         <div class="img17">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img18.jpeg" alt="Summer x2 Osaka">
+            <img src="img18.jpeg" alt="TOKYO">
             <span>바스락거리게 잘 튀겨진 튀김에 허니콤보 간장 조합, 잊지 못하는 맛이다.</span>
             </li>
             </ul>
@@ -229,7 +230,7 @@
         <div class="img18">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img19.jpeg" alt="Summer x2 Osaka">
+            <img src="img19.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -237,7 +238,7 @@
         <div class="img19">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img20.jpeg" alt="Summer x2 Osaka">
+            <img src="img20.jpeg" alt="TOKYO">
             <span>다먹고 나오니 pm 10:30 쯤. .</span>
             </li>
             </ul>
@@ -245,7 +246,7 @@
         <div class="img20">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img21.jpeg" alt="Summer x2 Osaka">
+            <img src="img21.jpeg" alt="TOKYO">
                 <p>📍 CITAN</p>
             <span>이 날 머무른 호스텔, 카페와 바가 함께 있고 또 직원분들에게 나는 우드향이 좋았다^^.</span>
             </li>
@@ -254,7 +255,7 @@
         <div class="img21">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img22.jpeg" alt="Summer x2 Osaka">
+            <img src="img22.jpeg" alt="TOKYO">
             <span>편의점에서 간식 사냥.</span>
             </li>
             </ul>
@@ -262,7 +263,7 @@
         <div class="img22">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img23.jpeg" alt="Summer x2 Osaka">
+            <img src="img23.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -270,7 +271,7 @@
         <div class="img23">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img24.jpeg" alt="Summer x2 Osaka">
+            <img src="img24.jpeg" alt="TOKYO">
             <span>짧게 머물어서 공유 주방은 못써봤지만</span>
             </li>
             </ul>
@@ -278,7 +279,7 @@
         <div class="img24">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img25.jpeg" alt="Summer x2 Osaka">
+            <img src="img25.jpeg" alt="TOKYO">
             <span>냉장고에 이로하스는 잠깐 맡겼지.</span>
             </li>
             </ul>
@@ -286,7 +287,7 @@
         <div class="img25">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img26.jpeg" alt="Summer x2 Osaka">
+            <img src="img26.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -294,7 +295,7 @@
         <div class="img26">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img27.jpeg" alt="Summer x2 Osaka">
+            <img src="img27.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -302,7 +303,7 @@
         <div class="img27">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img28.jpeg" alt="Summer x2 Osaka">
+            <img src="img28.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -310,7 +311,7 @@
         <div class="img28">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img29.jpeg" alt="Summer x2 Osaka">
+            <img src="img29.jpeg" alt="TOKYO">
             <span>오늘의 행선지는 요요기!</span>
             </li>
             </ul>
@@ -318,7 +319,7 @@
         <div class="img29">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img30.jpeg" alt="Summer x2 Osaka">
+            <img src="img30.jpeg" alt="TOKYO">
             <span></span>
             </li>
             </ul>
@@ -326,7 +327,7 @@
         <div class="img30">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img31.jpeg" alt="Summer x2 Osaka">
+            <img src="img31.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -334,7 +335,7 @@
         <div class="img31">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img32.jpeg" alt="Summer x2 Osaka">
+            <img src="img32.jpeg" alt="TOKYO">
                 <p>📍 Yoyogi Station</p>
             <span>요요기는 유명한 베이커리가 모여있어서 좋다.</span>
             </li>
@@ -343,7 +344,7 @@
         <div class="img32">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img33.jpeg" alt="Summer x2 Osaka">
+            <img src="img33.jpeg" alt="TOKYO">
             <span></span>
             </li>
             </ul>
@@ -351,7 +352,7 @@
         <div class="img33">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img34.jpeg" alt="Summer x2 Osaka">
+            <img src="img34.jpeg" alt="TOKYO">
             <span>로손의 프리미엄 버전인 '네추럴 로손'도 역 앞에 바로 있다.</span>
             </li>
             </ul>
@@ -359,7 +360,7 @@
         <div class="img34">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img35.jpeg" alt="Summer x2 Osaka">
+            <img src="img35.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -367,7 +368,7 @@
         <div class="img35">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img36.jpeg" alt="Summer x2 Osaka">
+            <img src="img36.jpeg" alt="TOKYO">
             <span>신주쿠 가는 길 어느 길목</span>
             </li>
             </ul>
@@ -375,7 +376,7 @@
         <div class="img36">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img37.jpeg" alt="Summer x2 Osaka">
+            <img src="img37.jpeg" alt="TOKYO">
             <span></span>
             </li>
             </ul>
@@ -383,7 +384,7 @@
         <div class="img37">
             <ul class="clearfix">
              <li>
-             <img src="images/tokyo/img38.jpeg" alt="Summer x2 Osaka">
+             <img src="img38.jpeg" alt="TOKYO">
              <span>약간의 포포몬쓰 컷</span>
              </li>
             </ul>
@@ -392,7 +393,7 @@
         <div class="img39">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img40.jpeg" alt="Summer x2 Osaka">
+            <img src="img40.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -400,7 +401,7 @@
         <div class="img40">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img41.jpeg" alt="Summer x2 Osaka">
+            <img src="img41.jpeg" alt="TOKYO">
             <span></span>
             </li>
             </ul>
@@ -408,7 +409,7 @@
         <div class="img41">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img42.jpeg" alt="Summer x2 Osaka">
+            <img src="img42.jpeg" alt="TOKYO">
                 <p>📍 Tatsunoya</p>
             <span>츠케멘이 유명한 신주쿠 타츠노야</span>
             </li>
@@ -417,7 +418,7 @@
         <div class="img42">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img43.jpeg" alt="Summer x2 Osaka">
+            <img src="img43.jpeg" alt="TOKYO">
             <span>우리가 시킨건 호르몬 츠케멘! 육수 감칠맛이 엄청났다. 담엔 밥까지 말아먹을테다. </span>
             </li>
             </ul>
@@ -425,7 +426,7 @@
         <div class="img43">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img44.jpeg" alt="Summer x2 Osaka">
+            <img src="img44.jpeg" alt="TOKYO">
             <span>도쿄 디즈니 스토어 첫 방문.</span>
             </li>
             </ul>
@@ -433,7 +434,7 @@
         <div class="img44">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img45.jpeg" alt="Summer x2 Osaka">
+            <img src="img45.jpeg" alt="TOKYO">
             <span>사진에선 버즈를 들고 있지만 나는 우디를 샀다</span>
             </li>
             </ul>
@@ -441,7 +442,7 @@
         <div class="img45">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img46.jpeg" alt="Summer x2 Osaka">
+            <img src="img46.jpeg" alt="TOKYO">
             <span>저 마이크 인형은 우리 강아지 최애 장난감이 되었고</span>
             </li>
             </ul>
@@ -449,7 +450,7 @@
         <div class="img46">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img47.jpeg" alt="Summer x2 Osaka">
+            <img src="img47.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -457,7 +458,7 @@
         <div class="img47">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img48.jpeg" alt="Summer x2 Osaka">
+            <img src="img48.jpeg" alt="TOKYO">
             <span></span>
             </li>
             </ul>
@@ -465,7 +466,7 @@
         <div class="img48">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img49.jpeg" alt="Summer x2 Osaka">
+            <img src="img49.jpeg" alt="TOKYO">
             <span></span>
             </li>
             </ul>
@@ -473,7 +474,7 @@
         <div class="img49">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img50.jpeg" alt="Summer x2 Osaka">
+            <img src="img50.jpeg" alt="TOKYO">
             <span>그리고 스크램블 교차로! 소문대로 항상 사람이 많았다.</span>
             </li>
             </ul>
