--- a/tokyo3.html
+++ b/tokyo3.html
@@ -5,7 +5,9 @@
     <title>TOKYO</title>
     
     <!-- style -->
-    <link rel="stylesheet" href="css/tokyo3.style.css">
+    <link rel="stylesheet" href="tokyo3.style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100&family=Jost:ital,wght@0,400;1,200&family=Noto+Sans+Display&family=Noto+Sans+KR:wght@100;300&family=Noto+Serif+Georgian&family=Poppins:wght@100&display=swap" rel="stylesheet">
+
 </head>
     
 <body>
@@ -42,7 +44,7 @@
         <div class="img">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img101.jpeg" alt="Summer x2 Osaka">
+            <img src="img101.jpeg" alt="TOKYO">
             <span>오사카에서의 첫 사진</span>
             </li>
             </ul>
@@ -50,7 +52,7 @@
         <div class="img1">
             <ul class="clearfix">
              <li>
-             <img src="images/tokyo/img102.jpeg" alt="Summer x2 Osaka">
+             <img src="img102.jpeg" alt="TOKYO">
              <span> </span>
              </li>
             </ul>
@@ -58,7 +60,7 @@
         <div class="img2">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img103.jpeg" alt="Summer x2 Osaka">
+            <img src="img103.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -66,7 +68,7 @@
         <div class="img3">
             <ul class="clearfix">
              <li>
-             <img src="images/tokyo/img104.jpeg" alt="Summer x2 Osaka">
+             <img src="img104.jpeg" alt="TOKYO">
              <p>📍Kansai International Airport</p>
              <span>공항 열차타고 라피트 타러 가는 길이다. </span>
              </li>
@@ -75,7 +77,7 @@
         <div class="img4">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img105.jpeg" alt="Summer x2 Osaka">
+            <img src="img105.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -83,7 +85,7 @@
         <div class="img5">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img106.jpeg" alt="Summer x2 Osaka">
+            <img src="img106.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -91,7 +93,7 @@
         <div class="img6">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img107.jpeg" alt="Summer x2 Osaka">
+            <img src="img107.jpeg" alt="TOKYO">
             <span>공항 내 편의점에서 갑자기 모찌를 사먹고는.</span>
             </li>
             </ul>
@@ -99,7 +101,7 @@
         <div class="img7">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img108.jpeg" alt="Summer x2 Osaka">
+            <img src="img108.jpeg" alt="TOKYO">
             <span>기념품이 스퀴즈라니! 카와이이</span>
             </li>
             </ul>
@@ -107,7 +109,7 @@
         <div class="img8">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img109.jpeg" alt="Summer x2 Osaka">
+            <img src="img109.jpeg" alt="TOKYO">
             <span>난바역으로 가는 라피트 정류장 도착</span>
             </li>
             </ul>
@@ -115,7 +117,7 @@
         <div class="img9">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img110.jpeg" alt="Summer x2 Osaka">
+            <img src="img110.jpeg" alt="TOKYO">
             <span>그리고 편의점 3대장 간식</span>
             </li>
             </ul>
@@ -123,7 +125,7 @@
         <div class="img10">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img111.jpeg" alt="Summer x2 Osaka">
+            <img src="img111.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -131,7 +133,7 @@
         <div class="img11">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img112.jpeg" alt="Summer x2 Osaka">
+            <img src="img112.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -139,7 +141,7 @@
         <div class="img12">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img113.jpeg" alt="Summer x2 Osaka">
+            <img src="img113.jpeg" alt="TOKYO">
             <span>조금 기다려 드디어 탄 라피트, 줄줄이 나있는 동그란 창문들은 놓칠 수 없어 </span>
             </li>
             </ul>
@@ -147,7 +149,7 @@
         <div class="img13">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img114.jpeg" alt="Summer x2 Osaka">
+            <img src="img114.jpeg" alt="TOKYO">
             <span>여름 중에서도 가장 여름 날씨다.</span>
             </li>
             </ul>
@@ -155,7 +157,7 @@
         <div class="img14">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img115.jpeg" alt="Summer x2 Osaka">
+            <img src="img115.jpeg" alt="TOKYO">
             <span>미니 레시또- 는 모으지 않고 못배긴다.</span>
             </li>
             </ul>
@@ -163,7 +165,7 @@
         <div class="img15">
             <ul class="clearfix">
              <li>
-             <img src="images/tokyo/img116.jpeg" alt="Summer x2 Osaka">
+             <img src="img116.jpeg" alt="TOKYO">
              <p>📍Nanba Station</p>
              <span>난바 도착. 이제 나간다!</span>
              </li>
@@ -172,7 +174,7 @@
         <div class="img16">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img117.jpeg" alt="Summer x2 Osaka">
+            <img src="img117.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -180,7 +182,7 @@
         <div class="img17">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img118.jpeg" alt="Summer x2 Osaka">
+            <img src="img118.jpeg" alt="TOKYO">
             <span>역사에 야채가게라니</span>
             </li>
             </ul>
@@ -188,7 +190,7 @@
         <div class="img18">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img119.jpeg" alt="Summer x2 Osaka">
+            <img src="img119.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -196,7 +198,7 @@
         <div class="img19">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img120.jpeg" alt="Summer x2 Osaka">
+            <img src="img120.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -204,7 +206,7 @@
         <div class="img20">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img121.jpeg" alt="Summer x2 Osaka">
+            <img src="img121.jpeg" alt="TOKYO">
             <span>편의점은 먹고싶은게 너무 많다</span>
             </li>
             </ul>
@@ -212,7 +214,7 @@
         <div class="img21">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img122.jpeg" alt="Summer x2 Osaka">
+            <img src="img122.jpeg" alt="TOKYO">
             <span>"눈 돌아간다"는 딱 이럴 때</span>
             </li>
             </ul>
@@ -220,7 +222,7 @@
         <div class="img22">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img123.jpeg" alt="Summer x2 Osaka">
+            <img src="img123.jpeg" alt="TOKYO">
             <span>이맘 때 오사카는 무려 폭염이였지만</span>
             </li>
             </ul>
@@ -228,7 +230,7 @@
         <div class="img23">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img124.jpeg" alt="Summer x2 Osaka">
+            <img src="img124.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -236,7 +238,7 @@
         <div class="img24">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img125.jpeg" alt="Summer x2 Osaka">
+            <img src="img125.jpeg" alt="TOKYO">
             <span>거리마다 끝없이 높던 하늘과</span>
             </li>
             </ul>
@@ -244,7 +246,7 @@
         <div class="img25">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img126.jpeg" alt="Summer x2 Osaka">
+            <img src="img126.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -252,7 +254,7 @@
         <div class="img26">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img127.jpeg" alt="Summer x2 Osaka">
+            <img src="img127.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -260,7 +262,7 @@
         <div class="img27">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img128.jpeg" alt="Summer x2 Osaka">
+            <img src="img128.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -268,7 +270,7 @@
         <div class="img28">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img130.jpeg" alt="Summer x2 Osaka">
+            <img src="img130.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -276,7 +278,7 @@
         <div class="img29">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img131.jpeg" alt="Summer x2 Osaka">
+            <img src="img131.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -284,7 +286,7 @@
         <div class="img30">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img129.jpeg" alt="Summer x2 Osaka">
+            <img src="img129.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -292,7 +294,7 @@
         <div class="img31">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img132.jpeg" alt="Summer x2 Osaka">
+            <img src="img132.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -300,7 +302,7 @@
         <div class="img32">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img133.jpeg" alt="Summer x2 Osaka">
+            <img src="img133.jpeg" alt="TOKYO">
             <span>쨍한 햇볕 풍경은 폭염을 잊게해. .</span>
             </li>
             </ul>
@@ -308,7 +310,7 @@
         <div class="img33">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img134.jpeg" alt="Summer x2 Osaka">
+            <img src="img134.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -316,7 +318,7 @@
         <div class="img34">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img135.jpeg" alt="Summer x2 Osaka">
+            <img src="img135.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -324,7 +326,7 @@
         <div class="img35">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img136.jpeg" alt="Summer x2 Osaka">
+            <img src="img136.jpeg" alt="TOKYO">
             <span> 라-멘</span>
             </li>
             </ul>
@@ -332,7 +334,7 @@
         <div class="img36">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img137.jpeg" alt="Summer x2 Osaka">
+            <img src="img137.jpeg" alt="TOKYO">
             <span> 낡은 건물과 신식 건물이 공존하지만 왠지 낡은 간판들에 더 눈이 간다</span>
             </li>
             </ul>
@@ -340,7 +342,7 @@
         <div class="img37">
             <ul class="clearfix">
              <li>
-             <img src="images/tokyo/img138.jpeg" alt="Summer x2 Osaka">
+             <img src="img138.jpeg" alt="TOKYO">
              <p>📍Sobayosi</p>
              <span>첫 끼는 로컬, 관광객에 모두에게 맛집인 100년 전통 소바전문점. </span>
              </li>
@@ -349,7 +351,7 @@
         <div class="img38">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img139.jpeg" alt="Summer x2 Osaka">
+            <img src="img139.jpeg" alt="TOKYO">
             <span>장어덮밥도 유명하지만, 가장 맛있던건 저 새우덴뿌라다. 다음엔 꼭 튀김정식을 먹어야지</span>
             </li>
             </ul>
@@ -357,7 +359,7 @@
         <div class="img39">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img140.jpeg" alt="Summer x2 Osaka">
+            <img src="img140.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -365,7 +367,7 @@
         <div class="img40">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img141.jpeg" alt="Summer x2 Osaka">
+            <img src="img141.jpeg" alt="TOKYO">
             <span>사자 머리의 야사카 신사.</span>
             </li>
             </ul>
@@ -373,7 +375,7 @@
         <div class="img41">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img142.jpeg" alt="Summer x2 Osaka">
+            <img src="img142.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -381,7 +383,7 @@
         <div class="img42">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img143.jpeg" alt="Summer x2 Osaka">
+            <img src="img143.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -389,7 +391,7 @@
         <div class="img43">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img144.jpeg" alt="Summer x2 Osaka">
+            <img src="img144.jpeg" alt="TOKYO">
             <span>거리에 서너개씩 꼭 있는 자판기가 무더위에는 진짜 오아시스가 따로 없다</span>
             </li>
             </ul>
@@ -397,7 +399,7 @@
         <div class="img44">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img145.jpeg" alt="Summer x2 Osaka">
+            <img src="img145.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -405,7 +407,7 @@
         <div class="img45">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img146.jpeg" alt="Summer x2 Osaka">
+            <img src="img146.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -413,7 +415,7 @@
         <div class="img46">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img147.jpeg" alt="Summer x2 Osaka">
+            <img src="img147.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -421,7 +423,7 @@
         <div class="img47">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img148.jpeg" alt="Summer x2 Osaka">
+            <img src="img148.jpeg" alt="TOKYO">
             <span>키미노 나마에와. . . 영화 그자체</span>
             </li>
             </ul>
@@ -429,7 +431,7 @@
         <div class="img48">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img149.jpeg" alt="Summer x2 Osaka">
+            <img src="img149.jpeg" alt="TOKYO">
             <span> </span>
             </li>
             </ul>
@@ -437,7 +439,7 @@
         <div class="img49">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img150.jpeg" alt="Summer x2 Osaka">
+            <img src="img150.jpeg" alt="TOKYO">
             <span>마리오 와루도-</span>
             </li>
             </ul>
@@ -445,7 +447,7 @@
             <div class="img50">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img151.jpeg" alt="Summer x2 Osaka">
+            <img src="img151.jpeg" alt="TOKYO">
             <span>마리오 와루도-</span>
             </li>
             </ul>
@@ -453,7 +455,7 @@
             <div class="img51">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img152.jpeg" alt="Summer x2 Osaka">
+            <img src="img152.jpeg" alt="TOKYO">
             <span>마리오 와루도-</span>
             </li>
             </ul>
@@ -461,7 +463,7 @@
             <div class="img52">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img153.jpeg" alt="Summer x2 Osaka">
+            <img src="img153.jpeg" alt="TOKYO">
             <span>마리오 와루도-</span>
             </li>
             </ul>
@@ -469,7 +471,7 @@
             <div class="img53">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img154.jpeg" alt="Summer x2 Osaka">
+            <img src="img154.jpeg" alt="TOKYO">
             <span>마리오 와루도-</span>
             </li>
             </ul>
@@ -477,7 +479,7 @@
             <div class="img54">
             <ul class="clearfix">
             <li>
-            <img src="images/tokyo/img155.jpeg" alt="Summer x2 Osaka">
+            <img src="img155.jpeg" alt="TOKYO">
             <span>마리오 와루도-</span>
             </li>
             </ul>
