--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctypehtml>
 <html>
 <head>
-    <title>Hayeon.com</title>
+    <title>Hayeon.jpg</title>
     <meta charset="utf-8">
 
     <!-- style -->
