--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctypehtml>
 <html>
 <head>
-    <title>Hayeon.jpg</title>
+    <title>Hayeon</title>
     <meta charset="utf-8">
 
     <!-- style -->
@@ -16,7 +16,7 @@
 <body>
    <div id="wrap">
         <header id="header">
-            <h1>Hayeon.com</h1>
+            <h1>Hayeon.jpg</h1>
                 <style type="text/css"> 
                 a img{border:none;}
                 </style>
