--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
    <div id="wrap">
         <header id="header">
-            <h1>Hayeon.jpg</h1>
+            <h1>Hayeon.JPG</h1>
                 <style type="text/css"> 
                 a img{border:none;}
                 </style>
